src/ApiGateways/Envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10100
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/api/basket/items"
                route:
                  auto_host_rewrite: true
                  cluster: api_bff_aggregator
              - match:
                  prefix: "/api/catalog"
                route:
                  auto_host_rewrite: true
                  cluster: catalog_service
              - match:
                  prefix: "/api/basket"
                route:
                  auto_host_rewrite: true
                  cluster: basket_service
              - match:
                  prefix: "/api/order"
                route:
                  auto_host_rewrite: true
                  cluster: order_service
          http_filters:
          - name: envoy.filters.http.router   
  clusters:
  - name: catalog_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: catalog_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: webshop.services.catalog.api
                port_value: 80
  - name: basket_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: basket_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: webshop.services.basket.api
                port_value: 80
  - name: order_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: order_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: webshop.services.order.api
                port_value: 80
  - name: api_bff_aggregator
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: api_bff_aggregator
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: webshop.apigateway.bffaggregator
                port_value: 80
